<resources>
    <string name="app_name">Control de pagos</string>
    <string name="display_app_name">Emprende Móvil</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_begin_session">Iniciar sesión</string>
    <string name="hint_company_code">Codigo de empresa</string>
    <string name="hint_user">Codigo asesor</string>
    <string name="hint_password">Contraseña</string>
    <string name="action_signin">Entrar</string>
    <string name="empty_groups_advice">No hay grupos pendientes de pagos</string>

    <string name="cFormatoCodigoGC" formatted="false">%06d</string>
    <string name="cCodigoNombre" formatted="false">Ciclo %02d %s</string>
    <string name="cFormatoDescripcionGrupo" formatted="false">%d clientes %d registros</string>
    <string name="cFormatoControlPagoSecuenciaNumero" formatted="false">Núm. registro %02d</string>
    <string name="cMASNuevoRegistro">+ Nuevo registro</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_theoric_payment">Pago teórico</string>
    <string name="text_difference">Diferencia</string>
    <string name="text_real_payment">Pago pactado</string>
    <string name="text_total_payment">Pago total</string>
    <string name="text_return">Devolución</string>
    <string name="text_input">Solidario</string>
    <string name="text_penalty">Multa</string>
    <string name="text_saving">Apartado</string>
    <string name="text_assistance">Asistencia</string>
    <string name="title_downloading_groups">Descargando grupos...</string>
    <string name="title_writing_groups">Escribiendo grupos...</string>
    <string name="title_downloading_clients">Descargando clientes...</string>
    <string name="title_writing_clients">Escribiendo clientes...</string>
    <string name="title_loading_data">Cargando datos...</string>
    <string name="action_register">Guardar</string>
    <string name="action_save">Guardar</string>
    <string name="placeholder_resume">AQUI VA EL RESUMEN</string>
<<<<<<< HEAD
    <string name="client_details_placeholder">Pago teórico: %s\nPago real: %s\nDevolución: %s\nSolidario: %s\nMulta: %s\nApartado: %s</string>
=======
    <string name="client_details_placeholder">Pago teórico: %s\nPago real: %s\nDevolución: %s\nAportación: %s\nMulta: %s\nApartado: %s</string>
>>>>>>> f8c9b68e4fd972a2e4d6d2d6be451b17b629bf15
    <string name="hint_back_without_saving">Estas seguro que deseas salir sin guardar tus cambios?</string>
    <string name="text_url_login">Login URL</string>
    <string name="text_url_consulta">Servicios de Consulta</string>
    <string name="text_url_gps">Servicio de Geolocalización</string>
    <string name="hint_fill_allfields">Llena todos los campos de configuración</string>
    <string name="hint_config_saved">Configuración guardada</string>
    <string name="title_activity_sequence">SequenceActivity</string>
    <string name="title_activity_sequence_edit">SequenceEditActivity</string>
</resources>
