<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.PaymentDetailsFragment">

        <View
            android:id="@+id/vw_fakeview"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:background="@drawable/background_gradient"
            android:text="@string/hello_blank_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/hint_code"
            style="@style/TextView.Normal.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Codigo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_code"
            style="@style/TextView.Normal.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="VEANME"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hint_code"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hint_name"
            style="@style/TextView.Normal.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint_code" />

        <TextView
            android:id="@+id/txt_name"
            style="@style/TextView.Normal.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="VEANMEVEANMEVEANMEVEANMEVEANMEVEANMEVEANMEVEANMEVEANME"
            android:singleLine="true"
            android:ellipsize="marquee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hint_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_code" />

        <TextView
            android:id="@+id/hint_role"
            style="@style/TextView.Normal.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Puesto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <TextView
            android:id="@+id/txt_role"
            style="@style/TextView.Normal.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="VEANME"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hint_role"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_theorical_payment"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/HintAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vw_fakeview" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_theorical_payment"
                android:drawableLeft="@drawable/ic_money"
                style="@style/StyledTilEditTextTheme"
                android:focusable="false"
                android:textColor="@color/colorLightGray"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_theoric_payment" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_difference"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/HintAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_theorical_payment" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_difference"
                style="@style/StyledTilEditTextTheme"
                android:drawableLeft="@drawable/ic_money"
                android:focusable="false"
                android:textColor="@color/colorLightGray"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_difference" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_real_payment"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/HintAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_difference" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_real_payment"
                android:drawableLeft="@drawable/ic_money"
                style="@style/StyledTilEditTextTheme"
                android:textColor="@color/colorLightGray"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_real_payment" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_return"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/HintAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_real_payment" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_return"
                android:drawableLeft="@drawable/ic_money"
                style="@style/StyledTilEditTextTheme"
                android:textColor="@color/colorLightGray"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_return" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_input"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/HintAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_return" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_contribution"
                android:drawableLeft="@drawable/ic_money"
                style="@style/StyledTilEditTextTheme"
                android:textColor="@color/colorLightGray"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_penalty"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/HintAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_input" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_fee"
                android:drawableLeft="@drawable/ic_money"
                style="@style/StyledTilEditTextTheme"
                android:textColor="@color/colorLightGray"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_penalty" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_saving"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/HintAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_penalty" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_saving"
                android:drawableLeft="@drawable/ic_money"
                style="@style/StyledTilEditTextTheme"
                android:textColor="@color/colorLightGray"
                android:backgroundTint="@color/colorPrimaryDark"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_saving" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/til_assistance"
            style="@style/TextView.Normal.White"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textAppearance="@style/HintAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_saving"
            android:text="Asistencia">

        </TextView>

        <Spinner
            android:id="@+id/spinner_assistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorDarkGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_assistance"
            />

        <Button
            android:id="@+id/btn_save_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="Guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_assistance" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
